# arrayinit

./: Cargo.toml  README.md
src/: arrayinit.rs  lib.rs
