[package]
name = "arrayinit"
version = "0.1.0"
edition = "2021"
authors = ["Nir Shahar <nirshaharroe@gmail.com>"]
categories = ["arrays", "initialization"]
description = "Robust and simple API to initialize arrays"
keywords = ["array", "arrays", "initialization", "arrayinit"]
repository = "https://github.com/nirshahar/arrayinit"
license = "MIT OR Apache-2.0"
include = ["/Cargo.toml", "/README.md", "/src/**"]

[dependencies]
